--- a/index.html
+++ b/index.html
@@ -2,13 +2,106 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://webcomponent.gedidigital.it/v2/gdwc-audio-player/src/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="la Repubblica è il quotidiano online aggiornato 24 ore su 24 su politica, cronaca, economia, sport, esteri, spettacoli, musica, cultura, scienza, tecnologia." name="description"/>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="https://www.repstatic.it/cless/main/nazionale/2016-v1/img/common/favicon/favicon.ico">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
     <title>
         la Repubblica - News in tempo reale - Le notizie e i video di politica, cronaca, economia, sport
     </title>
-
 </head>
 <body>
+    <header>
+        <!--navbar-->
+        <nav class="navbar navbar-expand-lg navbar-white bg-white fixed-top">
+            <div class="container">
+                <div class="collapse navbar-collapse" id="navbarsExample07">
+                    <a class="navbar-brand" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+                        <img src="images/icon_menu.png">
+                    </a>
+                    <div class="vr"></div>
+                    <ul class="navbar-nav">
+                        <li class="dropdown">
+                            <a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="images/icon_lupa.png">
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <div class="input-group my-1">
+                                        <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                                        <div class="input-group-append">
+                                            <button class="btn btn-outline-secondary" type="button">Button</button>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+
+                    <div class="ms-auto">
+                        <a class="nav-link" href="#"><img src="images/icon_abbonati.png"></a>
+                    </div>
+                    <div class="ms-auto">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><img src="images/icon_jedi.png"></a>
+                            </li>
+                            <div class="vr"></div>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><img src="images/icon_R.png"></a>
+                            </li>
+                            <div class="vr"></div>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><img src="images/icon_accedi.png"></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!--end navbar-->
+        <!--sidebar-->
+        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+            <div class="offcanvas-header">
+                <a class="nav-link" href="index.html"><img src="images/icon_R_sidebar.png"></a>
+                <div class="main">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Ricerca su Repubblica">
+                        <div class="input-group-append">
+                            <button type="button" class="btn btn-outline-secondary">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
+                                </svg>
+                                <span class="visually-hidden">Button</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <div>
+                    Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
+                </div>
+                <div class="dropdown mt-3">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
+                        Dropdown button
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!--end sidebar-->
+    </header>
 
 </body>
 </html>
