--- a/index.html
+++ b/index.html
@@ -721,6 +721,42 @@
                             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                 <strong>A-Z</strong>
                             </a>
+                            <div class="dropdown-menu bg-custom text-center">
+                                <div class="row p-2">
+                                    <div class="col">
+                                        Annunci
+                                    </div>
+                                    <div class="col">
+                                        Aste
+                                    </div>
+                                    <div class="col">
+                                        Bari
+                                    </div>
+                                    <div class="col">
+                                        Biblioteca
+                                    </div>
+                                    <div class="col">
+                                        Bologna
+                                    </div>
+                                </div>
+                                <div class="row p-2">
+                                    <div class="col">
+                                        Commenti
+                                    </div>
+                                    <div class="col">
+                                        Consigli.it
+                                    </div>
+                                    <div class="col">
+                                        Cronaca
+                                    </div>
+                                    <div class="col">
+                                        Cultura
+                                    </div>
+                                    <div class="col">
+                                        ...
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
